--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -28,8 +28,17 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium aut dolorum quae iste facilis veniam. Quibusdam quod repudiandae nostrum nam labore? Tempore cupiditate nulla ea veritatis, dignissimos corrupti autem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, repellendus officiis hic ipsum placeat quam facere molestias minima eaque enim eum atque voluptate reiciendis eveniet nostrum consequuntur tenetur officia exercitationem?
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quo a esse quaerat nesciunt. Tempore officiis a eligendi mollitia soluta dolore amet, magnam vitae obcaecati laudantium fugit ex natus repellendus?
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium aut dolorum quae iste facilis veniam. Quibusdam quod repudiandae nostrum nam labore? Tempore cupiditate nulla ea veritatis, dignissimos corrupti autem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, repellendus officiis hic ipsum placeat quam facere molestias minima eaque enim eum atque voluptate reiciendis eveniet nostrum consequuntur tenetur officia exercitationem?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quo a esse quaerat nesciunt. Tempore officiis a eligendi mollitia soluta dolore amet, magnam vitae obcaecati laudantium fugit ex natus repellendus?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium aut dolorum quae iste facilis veniam. Quibusdam quod repudiandae nostrum nam labore? Tempore cupiditate nulla ea veritatis, dignissimos corrupti autem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, repellendus officiis hic ipsum placeat quam facere molestias minima eaque enim eum atque voluptate reiciendis eveniet nostrum consequuntur tenetur officia exercitationem?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quo a esse quaerat nesciunt. Tempore officiis a eligendi mollitia soluta dolore amet, magnam vitae obcaecati laudantium fugit ex natus repellendus?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia praesentium aut dolorum quae iste facilis veniam. Quibusdam quod repudiandae nostrum nam labore? Tempore cupiditate nulla ea veritatis, dignissimos corrupti autem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, repellendus officiis hic ipsum placeat quam facere molestias minima eaque enim eum atque voluptate reiciendis eveniet nostrum consequuntur tenetur officia exercitationem?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quo a esse quaerat nesciunt. Tempore officiis a eligendi mollitia soluta dolore amet, magnam vitae obcaecati laudantium fugit ex natus repellendus?
         </p>
         
     </main>
