--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -28,6 +28,12 @@
             background-color: gray;
             color: white;
         }
+        tbody > tr:nth-child(odd) { /*2n - 1*/
+            background-color: white;
+        }
+        tbody > tr:nth-child(even)  /*2n*/{
+            background-color: lightgray;
+        }
         td.num {
             text-align: right;
         }
