--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um Iframe</h1>
     <p>Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com/" frameborder="0">
+        <iframe src="https://www.cursoemvideo.com/" frameborder="0" height="600" width="600" scolling="no">
             <a href="https://www.cursoemvideo.com/" target="_blank">Curso em vídeo</a>
         </iframe>       
         para aprender a programar.</p>
