--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -21,11 +21,13 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam vitae esse necessitatibus nulla iusto, quam voluptas eius alias dolores a nesciunt, repudiandae quisquam rem odit ut reiciendis assumenda, veniam commodi? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet ipsum tempore, beatae vel corrupti quam voluptates sed alias voluptate autem voluptas quidem aperiam soluta! Dolorem at repudiandae cupiditate vitae laborum!</p>
 
-    <iframe src="https://gustavoguanabara.github.io/" height="500" width="500" frameborder="0"></iframe>
+    <iframe src="https://gustavoguanabara.github.io/" height="500" width="500" frameborder="0">
+        <p>Infelizmente seu navegador não é compatível</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi corporis optio nemo repudiandae voluptates dolores dolorum neque, nam consectetur quisquam laboriosam itaque hic commodi eveniet laborum nobis alias consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam nobis fugiat doloremque sequi, provident voluptas porro saepe excepturi ut distinctio enim ducimus? Dolorem mollitia unde similique ut doloremque officia reiciendis.</p>
 
-    <iframe src="página001.html" height="500" width="500" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" height="500" width="500" frameborder="0"></iframe>
     
 </body>
 </html>
