--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe perspiciatis inventore officiis quo. Sunt fugiat alias eos doloribus repudiandae architecto nam neque dicta nobis, laudantium exercitationem reiciendis consequatur consequuntur ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nisi autem tenetur accusamus aliquid vero modi sed omnis quae. Natus nostrum nihil cumque iste asperiores blanditiis error pariatur assumenda sequi?</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>" >
         <p>Infelizmente seu navegador não é comatível</p>
     </iframe>
     
