--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
+    <main>
+        <h1>Testando media queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Versão para impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="Versão para PC">
+        <img id="tv" src="imagens/icon-tv.png" alt="Versão para TV">
+    </main>
     
 </body>
 </html>
